Better styling for location details name

--- a/web-client/src/app/index.html
+++ b/web-client/src/app/index.html
@@ -6,6 +6,11 @@
     <style>
         body { margin: 0; padding: 0; }
         .angular-google-map-container { height: 100vh; }
+
+        .location-name  {
+            font-weight: 400;
+            margin-bottom: 2px;
+        }
     </style>
 </head>
 <body ng-app="sfuber-movies">
