Add movie year to location details window

--- a/web-client/src/app/index.html
+++ b/web-client/src/app/index.html
@@ -11,6 +11,10 @@
             font-weight: 400;
             margin-bottom: 2px;
         }
+
+        .movie-year {
+            color: darkgray;
+        }
     </style>
 </head>
 <body ng-app="sfuber-movies">
