--- a/web-client/src/app/index.html
+++ b/web-client/src/app/index.html
@@ -14,6 +14,40 @@
         .movie-year {
             color: darkgray;
         }
+        .map-control {
+            width: 300px;
+            margin-left: 16px;
+            margin-top: 16px;
+            background-color: white;
+            border-radius: 2px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+            font-size: 14px;
+            padding: 12px;
+        }
+        .filter-input-container input {
+            width: 100%;
+            border: none;
+            outline: none;
+            font-size: 15px;
+        }
+        .angucomplete-dropdown {
+            position: absolute;
+            top: 59px;
+            left: 16px;
+            width: 324px;
+            z-index: 1;
+            background-color: white;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+        }
+        .angucomplete-row {
+            padding: 10px;
+        }
+        .angucomplete-selected-row {
+            background-color: #f5f5f5;
+        }
+        .filter-match {
+            color: red;
+        }
     </style>
 </head>
 <body ng-app="sfuber-movies">
